@@ -73,6 +73,8 @@
  * 22-Mar-2007 : Simplified getDataItem(RegularTimePeriod) - see patch 1685500 
  *               by Nick Guenther (DG);
  * 21-Jun-2007 : Removed JCommon dependencies (DG);
+ * 29-Jun-2007 : Changed first parameter in constructors from String to 
+ *               Comparable (DG);
  * 
  */
 
@@ -134,7 +136,7 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
      *
      * @param name  the series name (<code>null</code> not permitted).
      */
-    public TimeSeries(String name) {
+    public TimeSeries(Comparable name) {
         this(name, DEFAULT_DOMAIN_DESCRIPTION, DEFAULT_RANGE_DESCRIPTION, 
                 Day.class);
     }
@@ -147,7 +149,7 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
      * @param timePeriodClass  the type of time period (<code>null</code> not 
      *                         permitted).
      */
-    public TimeSeries(String name, Class timePeriodClass) {
+    public TimeSeries(Comparable name, Class timePeriodClass) {
         this(name, DEFAULT_DOMAIN_DESCRIPTION, DEFAULT_RANGE_DESCRIPTION, 
                 timePeriodClass);
     }
@@ -165,7 +167,7 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
      * @param timePeriodClass  the type of time period (<code>null</code> not 
      *                         permitted).
      */
-    public TimeSeries(String name, String domain, String range, 
+    public TimeSeries(Comparable name, String domain, String range, 
                       Class timePeriodClass) {
         super(name);
         this.domain = domain;
